--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.20"
+    ext.buildConfig = [
+            'versionCode'      : 1,
+            'versionName'      : "1.0.0",
+            'compileSdkVersion': 30,
+            'minSdkVersion'    : 14,
+            'targetSdkVersion' : 30
+    ]
     repositories {
         google()
         jcenter()
@@ -11,6 +18,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
     }
 }
 
