--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
+        //JitPack插件
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
